--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
         android:usesCleartextTraffic="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/ayuntamiento"
+        android:icon="@drawable/ayuntamiento1"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/ayuntamiento"
+        android:roundIcon="@drawable/ayuntamiento1"
         android:supportsRtl="true"
         android:theme="@style/Theme.Prototipo4"
         tools:targetApi="31">
